--- a/notebooks/Model_Training.ipynb
+++ b/notebooks/Model_Training.ipynb
@@ -806,11 +806,11 @@
     }
    ],
    "source": [
-    "# # Train final Random Forest model for saving\n",
-    "# rf_model = Pipeline([\n",
-    "#     (\"clf\", RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1))\n",
-    "# ])\n",
-    "# rf_model.fit(X_train, y_train)\n"
+    "# Train final Random Forest model for saving\n",
+    "rf_model = Pipeline([\n",
+    "    (\"clf\", RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1))\n",
+    "])\n",
+    "rf_model.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -827,24 +827,24 @@
     }
    ],
    "source": [
-    "# import joblib\n",
-    "# import os\n",
+    "import joblib\n",
+    "import os\n",
     "\n",
-    "# # Create 'models' directory if it doesn't exist\n",
-    "# os.makedirs(\"../models\", exist_ok=True)\n",
+    "# Create 'models' directory if it doesn't exist\n",
+    "os.makedirs(\"../models\", exist_ok=True)\n",
     "\n",
-    "# # Paths\n",
-    "# model_path = \"../models/random_forest_pipeline.pkl\"\n",
-    "# features_path = \"../models/features.json\"\n",
+    "# Paths\n",
+    "model_path = \"../models/random_forest_pipeline.pkl\"\n",
+    "features_path = \"../models/features.json\"\n",
     "\n",
-    "# # Save model pipeline\n",
-    "# joblib.dump(rf_model, model_path)\n",
+    "# Save model pipeline\n",
+    "joblib.dump(rf_model, model_path)\n",
     "\n",
-    "# # Save feature names\n",
-    "# with open(features_path, \"w\") as f:\n",
-    "#     json.dump(list(X_train.columns), f)\n",
+    "# Save feature names\n",
+    "with open(features_path, \"w\") as f:\n",
+    "    json.dump(list(X_train.columns), f)\n",
     "\n",
-    "# print(f\" Random Forest model saved to: {model_path}\")\n"
+    "print(f\" Random Forest model saved to: {model_path}\")\n"
    ]
   },
   {
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1098,6 +1098,138 @@
       "    \"Idle Mean\": 83900000.0,\n",
       "    \"Idle Std\": 0.0,\n",
       "    \"Idle Min\": 83900000\n",
+      "  },\n",
+      "  {\n",
+      "    \"Destination Port\": 59197,\n",
+      "    \"Flow Duration\": 75,\n",
+      "    \"Total Fwd Packets\": 1,\n",
+      "    \"Total Length of Fwd Packets\": 6,\n",
+      "    \"Fwd Packet Length Max\": 6,\n",
+      "    \"Fwd Packet Length Min\": 6,\n",
+      "    \"Fwd Packet Length Mean\": 6.0,\n",
+      "    \"Bwd Packet Length Max\": 6,\n",
+      "    \"Bwd Packet Length Min\": 6,\n",
+      "    \"Flow Bytes/s\": 160000.0,\n",
+      "    \"Flow Packets/s\": 26666.66667,\n",
+      "    \"Flow IAT Mean\": 75.0,\n",
+      "    \"Flow IAT Std\": 0.0,\n",
+      "    \"Flow IAT Min\": 75,\n",
+      "    \"Fwd IAT Mean\": 0.0,\n",
+      "    \"Fwd IAT Min\": 0,\n",
+      "    \"Bwd IAT Total\": 0,\n",
+      "    \"Bwd IAT Mean\": 0.0,\n",
+      "    \"Bwd IAT Std\": 0.0,\n",
+      "    \"Bwd IAT Min\": 0,\n",
+      "    \"Fwd PSH Flags\": 0,\n",
+      "    \"Bwd Packets/s\": 13333.33333,\n",
+      "    \"Min Packet Length\": 6,\n",
+      "    \"Max Packet Length\": 6,\n",
+      "    \"Packet Length Mean\": 6.0,\n",
+      "    \"Packet Length Variance\": 0.0,\n",
+      "    \"FIN Flag Count\": 0,\n",
+      "    \"RST Flag Count\": 0,\n",
+      "    \"PSH Flag Count\": 0,\n",
+      "    \"ACK Flag Count\": 1,\n",
+      "    \"URG Flag Count\": 1,\n",
+      "    \"Down/Up Ratio\": 1,\n",
+      "    \"Init_Win_bytes_forward\": 118,\n",
+      "    \"Init_Win_bytes_backward\": 253,\n",
+      "    \"act_data_pkt_fwd\": 0,\n",
+      "    \"min_seg_size_forward\": 20,\n",
+      "    \"Active Mean\": 0.0,\n",
+      "    \"Active Std\": 0.0,\n",
+      "    \"Active Max\": 0,\n",
+      "    \"Idle Mean\": 0.0,\n",
+      "    \"Idle Std\": 0.0,\n",
+      "    \"Idle Min\": 0\n",
+      "  },\n",
+      "  {\n",
+      "    \"Destination Port\": 53,\n",
+      "    \"Flow Duration\": 176,\n",
+      "    \"Total Fwd Packets\": 2,\n",
+      "    \"Total Length of Fwd Packets\": 46,\n",
+      "    \"Fwd Packet Length Max\": 23,\n",
+      "    \"Fwd Packet Length Min\": 23,\n",
+      "    \"Fwd Packet Length Mean\": 23.0,\n",
+      "    \"Bwd Packet Length Max\": 23,\n",
+      "    \"Bwd Packet Length Min\": 23,\n",
+      "    \"Flow Bytes/s\": 522727.2727,\n",
+      "    \"Flow Packets/s\": 22727.27273,\n",
+      "    \"Flow IAT Mean\": 58.66666667,\n",
+      "    \"Flow IAT Std\": 99.88159657,\n",
+      "    \"Flow IAT Min\": 1,\n",
+      "    \"Fwd IAT Mean\": 1.0,\n",
+      "    \"Fwd IAT Min\": 1,\n",
+      "    \"Bwd IAT Total\": 1,\n",
+      "    \"Bwd IAT Mean\": 1.0,\n",
+      "    \"Bwd IAT Std\": 0.0,\n",
+      "    \"Bwd IAT Min\": 1,\n",
+      "    \"Fwd PSH Flags\": 0,\n",
+      "    \"Bwd Packets/s\": 11363.63636,\n",
+      "    \"Min Packet Length\": 23,\n",
+      "    \"Max Packet Length\": 23,\n",
+      "    \"Packet Length Mean\": 23.0,\n",
+      "    \"Packet Length Variance\": 0.0,\n",
+      "    \"FIN Flag Count\": 0,\n",
+      "    \"RST Flag Count\": 0,\n",
+      "    \"PSH Flag Count\": 0,\n",
+      "    \"ACK Flag Count\": 0,\n",
+      "    \"URG Flag Count\": 0,\n",
+      "    \"Down/Up Ratio\": 1,\n",
+      "    \"Init_Win_bytes_forward\": -1,\n",
+      "    \"Init_Win_bytes_backward\": -1,\n",
+      "    \"act_data_pkt_fwd\": 1,\n",
+      "    \"min_seg_size_forward\": 20,\n",
+      "    \"Active Mean\": 0.0,\n",
+      "    \"Active Std\": 0.0,\n",
+      "    \"Active Max\": 0,\n",
+      "    \"Idle Mean\": 0.0,\n",
+      "    \"Idle Std\": 0.0,\n",
+      "    \"Idle Min\": 0\n",
+      "  },\n",
+      "  {\n",
+      "    \"Destination Port\": 80,\n",
+      "    \"Flow Duration\": 8227634,\n",
+      "    \"Total Fwd Packets\": 4,\n",
+      "    \"Total Length of Fwd Packets\": 24,\n",
+      "    \"Fwd Packet Length Max\": 6,\n",
+      "    \"Fwd Packet Length Min\": 6,\n",
+      "    \"Fwd Packet Length Mean\": 6.0,\n",
+      "    \"Bwd Packet Length Max\": 0,\n",
+      "    \"Bwd Packet Length Min\": 0,\n",
+      "    \"Flow Bytes/s\": 2.916998982,\n",
+      "    \"Flow Packets/s\": 0.486166497,\n",
+      "    \"Flow IAT Mean\": 2742544.667,\n",
+      "    \"Flow IAT Std\": 4749662.057,\n",
+      "    \"Flow IAT Min\": 229,\n",
+      "    \"Fwd IAT Mean\": 2742544.667,\n",
+      "    \"Fwd IAT Min\": 229,\n",
+      "    \"Bwd IAT Total\": 0,\n",
+      "    \"Bwd IAT Mean\": 0.0,\n",
+      "    \"Bwd IAT Std\": 0.0,\n",
+      "    \"Bwd IAT Min\": 0,\n",
+      "    \"Fwd PSH Flags\": 0,\n",
+      "    \"Bwd Packets/s\": 0.0,\n",
+      "    \"Min Packet Length\": 6,\n",
+      "    \"Max Packet Length\": 6,\n",
+      "    \"Packet Length Mean\": 6.0,\n",
+      "    \"Packet Length Variance\": 0.0,\n",
+      "    \"FIN Flag Count\": 0,\n",
+      "    \"RST Flag Count\": 0,\n",
+      "    \"PSH Flag Count\": 0,\n",
+      "    \"ACK Flag Count\": 1,\n",
+      "    \"URG Flag Count\": 0,\n",
+      "    \"Down/Up Ratio\": 0,\n",
+      "    \"Init_Win_bytes_forward\": 256,\n",
+      "    \"Init_Win_bytes_backward\": -1,\n",
+      "    \"act_data_pkt_fwd\": 3,\n",
+      "    \"min_seg_size_forward\": 20,\n",
+      "    \"Active Mean\": 652.0,\n",
+      "    \"Active Std\": 0.0,\n",
+      "    \"Active Max\": 652,\n",
+      "    \"Idle Mean\": 8226982.0,\n",
+      "    \"Idle Std\": 0.0,\n",
+      "    \"Idle Min\": 8226982\n",
       "  }\n",
       "]\n"
      ]
@@ -1107,7 +1239,7 @@
     "import pandas as pd, json\n",
     "test_df = pd.read_csv(\"../data/processed/test.csv\")\n",
     "X = test_df.drop(columns=[\"Label\"])\n",
-    "print(json.dumps(X.iloc[:2].to_dict(orient=\"records\"), indent=2))\n",
+    "print(json.dumps(X.iloc[:5].to_dict(orient=\"records\"), indent=2))\n",
     "\n"
    ]
   },
@@ -1117,24 +1249,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.6.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sklearn\n",
-    "print(sklearn.__version__)\n"
-   ]
   },
   {
    "cell_type": "code",
