--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
        "      <td>...</td>\n",
        "      <td>20</td>\n",
        "      <td>0.0</td>\n",
@@ -93,7 +93,7 @@
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
        "      <td>...</td>\n",
        "      <td>20</td>\n",
        "      <td>0.0</td>\n",
@@ -117,7 +117,175 @@
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46236</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54863</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>54871</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54925</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>54925</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9282</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BENIGN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>55153</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>17.67767</td>\n",
        "      <td>...</td>\n",
        "      <td>20</td>\n",
        "      <td>0.0</td>\n",
@@ -132,7 +300,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 79 columns</p>\n",
+       "<p>10 rows × 79 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -140,36 +308,78 @@
        "0              54865               3                   2   \n",
        "1              55054             109                   1   \n",
        "2              55055              52                   1   \n",
+       "3              46236              34                   1   \n",
+       "4              54863               3                   2   \n",
+       "5              54871            1022                   2   \n",
+       "6              54925               4                   2   \n",
+       "7              54925              42                   1   \n",
+       "8               9282               4                   2   \n",
+       "9              55153               4                   2   \n",
        "\n",
        "    Total Backward Packets  Total Length of Fwd Packets  \\\n",
        "0                        0                           12   \n",
        "1                        1                            6   \n",
        "2                        1                            6   \n",
+       "3                        1                            6   \n",
+       "4                        0                           12   \n",
+       "5                        0                           12   \n",
+       "6                        0                           12   \n",
+       "7                        1                            6   \n",
+       "8                        0                           12   \n",
+       "9                        0                           37   \n",
        "\n",
        "    Total Length of Bwd Packets   Fwd Packet Length Max  \\\n",
        "0                             0                       6   \n",
        "1                             6                       6   \n",
        "2                             6                       6   \n",
+       "3                             6                       6   \n",
+       "4                             0                       6   \n",
+       "5                             0                       6   \n",
+       "6                             0                       6   \n",
+       "7                             6                       6   \n",
+       "8                             0                       6   \n",
+       "9                             0                      31   \n",
        "\n",
        "    Fwd Packet Length Min   Fwd Packet Length Mean   Fwd Packet Length Std  \\\n",
-       "0                       6                      6.0                     0.0   \n",
-       "1                       6                      6.0                     0.0   \n",
-       "2                       6                      6.0                     0.0   \n",
+       "0                       6                      6.0                 0.00000   \n",
+       "1                       6                      6.0                 0.00000   \n",
+       "2                       6                      6.0                 0.00000   \n",
+       "3                       6                      6.0                 0.00000   \n",
+       "4                       6                      6.0                 0.00000   \n",
+       "5                       6                      6.0                 0.00000   \n",
+       "6                       6                      6.0                 0.00000   \n",
+       "7                       6                      6.0                 0.00000   \n",
+       "8                       6                      6.0                 0.00000   \n",
+       "9                       6                     18.5                17.67767   \n",
        "\n",
        "   ...   min_seg_size_forward  Active Mean   Active Std   Active Max  \\\n",
        "0  ...                     20          0.0          0.0            0   \n",
        "1  ...                     20          0.0          0.0            0   \n",
        "2  ...                     20          0.0          0.0            0   \n",
+       "3  ...                     20          0.0          0.0            0   \n",
+       "4  ...                     20          0.0          0.0            0   \n",
+       "5  ...                     20          0.0          0.0            0   \n",
+       "6  ...                     20          0.0          0.0            0   \n",
+       "7  ...                     20          0.0          0.0            0   \n",
+       "8  ...                     20          0.0          0.0            0   \n",
+       "9  ...                     20          0.0          0.0            0   \n",
        "\n",
        "    Active Min  Idle Mean   Idle Std   Idle Max   Idle Min   Label  \n",
        "0            0        0.0        0.0          0          0  BENIGN  \n",
        "1            0        0.0        0.0          0          0  BENIGN  \n",
        "2            0        0.0        0.0          0          0  BENIGN  \n",
+       "3            0        0.0        0.0          0          0  BENIGN  \n",
+       "4            0        0.0        0.0          0          0  BENIGN  \n",
+       "5            0        0.0        0.0          0          0  BENIGN  \n",
+       "6            0        0.0        0.0          0          0  BENIGN  \n",
+       "7            0        0.0        0.0          0          0  BENIGN  \n",
+       "8            0        0.0        0.0          0          0  BENIGN  \n",
+       "9            0        0.0        0.0          0          0  BENIGN  \n",
        "\n",
-       "[3 rows x 79 columns]"
+       "[10 rows x 79 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +396,7 @@
     "\n",
     "print(\"Shape:\", df.shape)\n",
     "print(\"Columns:\", len(df.columns))\n",
-    "df.head(3)"
+    "df.head(10)"
    ]
   },
   {
